workspace-sf/force-app/main/default/objects/CriticaProposta__c/CriticaProposta__c.object-meta.xml
<CustomObject>
    <description>Objeto responsável por armazenar as críticas da proposta</description>
    <label>Crítica da proposta</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Críticas da proposta</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>