workspace-sf/force-app/main/default/objects/CriticaProposta__c/fields/Acao__c.field-meta.xml
<CustomField>
    <fullName>Acao__c</fullName>
    <label>Ação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_de_Acoes</valueSetName>
    </valueSet>
</CustomField>