workspace-sf/force-app/main/default/objects/CriticaProposta__c/fields/CondicaoCritica__c.field-meta.xml
<CustomField>
    <fullName>CondicaoCritica__c</fullName>
    <label>Condição da crítica</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alteração de prêmio</fullName>
            </value>
            <value>
                <fullName>Exclusão de garantia</fullName>
            </value>
            <value>
                <fullName>Alteração de capital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>