workspace-sf/force-app/main/default/objects/CriticaProposta__c/fields/Data_inicio_resseguro__c.field-meta.xml
<CustomField>
    <fullName>Data_inicio_resseguro__c</fullName>
    <label>Data inicio resseguro</label>
    <type>Date</type>
</CustomField>