workspace-sf/force-app/main/default/objects/CriticaProposta__c/fields/Data_Limite_fim_da_analise__c.field-meta.xml
<CustomField>
    <fullName>Data_Limite_fim_da_analise__c</fullName>
    <label>Data Limite fim da análise</label>
    <type>Date</type>
</CustomField>