workspace-sf/force-app/main/default/objects/CriticaProposta__c/fields/DataFalhaIntegracao__c.field-meta.xml
<CustomField>
    <fullName>DataFalhaIntegracao__c</fullName>
    <description>Esse campo foi criado para armazenar a data inicial da falha na integração porém acabou sofrendo um ajuste onde agora ele irá guardar a data de envio do primeiro email de cobrança da renovação</description>
    <label>Data envio email cobranca</label>
    <type>Date</type>
</CustomField>