workspace-sf/force-app/main/default/objects/CriticaProposta__c/fields/DataFimPendencia__c.field-meta.xml
<CustomField>
    <fullName>DataFimPendencia__c</fullName>
    <label>Data fim de pendência</label>
    <type>Date</type>
</CustomField>