workspace-sf/force-app/main/default/objects/CriticaProposta__c/fields/DataInicioPendencia__c.field-meta.xml
<CustomField>
    <fullName>DataInicioPendencia__c</fullName>
    <label>Data de início de pendência</label>
    <type>Date</type>
</CustomField>