workspace-sf/force-app/main/default/objects/CriticaProposta__c/fields/DiasFalhaIntegracao__c.field-meta.xml
<CustomField>
    <fullName>DiasFalhaIntegracao__c</fullName>
    <description>Esse campo conta quantos dias ja se passaram após o envio do primeiro email de cobrança da renovação</description>
    <formula>IF(
OR(
ISPICKVAL(Status__c, &quot;Falha na Integração&quot;),
ISPICKVAL(Status__c, &quot;Pendenciado&quot;)
),
TODAY() - DataFalhaIntegracao__c,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias após primeiro email cobrança</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>