workspace-sf/force-app/main/default/objects/CriticaProposta__c/fields/EnvioParaAprovacao__c.field-meta.xml
<CustomField>
    <fullName>EnvioParaAprovacao__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Marcar este campo se a crítica deve ser aprovada por um superior</inlineHelpText>
    <label>Envio para aprovação</label>
    <type>Checkbox</type>
</CustomField>