workspace-sf/force-app/main/default/objects/CriticaProposta__c/fields/ErrosRecalculo__c.field-meta.xml
<CustomField>
    <fullName>ErrosRecalculo__c</fullName>
    <label>Erro Recalculo</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>