workspace-sf/force-app/main/default/objects/CriticaProposta__c/fields/FalhaIntegracao__c.field-meta.xml
<CustomField>
    <fullName>FalhaIntegracao__c</fullName>
    <description>Esse campo ajuda a verificar se a falha na integração ja ocorreu antes</description>
    <formula>IF(
    OR(
        ISPICKVAL(Status__c, &quot;Falha na Integração&quot;),
        ISPICKVAL(Status__c, &quot;Pendenciado&quot;)
    ),
    TODAY() - DATEVALUE(LastModifiedDate),
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias com falha sem atualização</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>