workspace-sf/force-app/main/default/objects/CriticaProposta__c/fields/IndicadorLiberacao__c.field-meta.xml
<CustomField>
    <fullName>IndicadorLiberacao__c</fullName>
    <description>Indica se o registro corrente apresenta ou não critica pendente</description>
    <formula>IF(ISPICKVAL(Status__c, &apos;Liberado&apos;) , 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indicador Liberação</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>