workspace-sf/force-app/main/default/objects/CriticaProposta__c/fields/Integracao__c.field-meta.xml
<CustomField>
    <fullName>Integracao__c</fullName>
    <label>Integração</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DOCUSIGN</fullName>
            </value>
            <value>
                <fullName>SAMPLE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>