workspace-sf/force-app/main/default/objects/CriticaProposta__c/fields/isFullEmissao__c.field-meta.xml
<CustomField>
    <fullName>isFullEmissao__c</fullName>
    <formula>Proposta__r.isFullEmissao__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isFullEmissao</label>
    <type>Checkbox</type>
</CustomField>