workspace-sf/force-app/main/default/objects/CriticaProposta__c/fields/Liberar_palavra_final__c.field-meta.xml
<CustomField>
    <fullName>Liberar_palavra_final__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo de controle para liberação da palavra final, a BatchContrPropRenv atualiza o campo para true caso esteja dentro das regras e o flow Contratar renovação faz a liberação da critica de acordo com este campo</description>
    <label>Liberar palavra final</label>
    <type>Checkbox</type>
</CustomField>