workspace-sf/force-app/main/default/objects/CriticaProposta__c/fields/MensagemCliente__c.field-meta.xml
<CustomField>
    <fullName>MensagemCliente__c</fullName>
    <label>Mensagem cliente</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>