workspace-sf/force-app/main/default/objects/CriticaProposta__c/fields/MensagemInterna__c.field-meta.xml
<CustomField>
    <fullName>MensagemInterna__c</fullName>
    <label>Mensagem interna</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>