workspace-sf/force-app/main/default/objects/CriticaProposta__c/fields/MensagemRepresentante__c.field-meta.xml
<CustomField>
    <fullName>MensagemRepresentante__c</fullName>
    <label>Mensagem representante</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>