workspace-sf/force-app/main/default/objects/CriticaProposta__c/fields/MotivoPendencia__c.field-meta.xml
<CustomField>
    <fullName>MotivoPendencia__c</fullName>
    <description>Este campo contém o motivo da critica estar pendenciada</description>
    <label>Motivo da Pendência</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendência enviada - Relatório Médico e Exames</fullName>
            </value>
            <value>
                <fullName>Pendência enviada - Cartão de crédito</fullName>
            </value>
            <value>
                <fullName>Pendência enviada - Seguro Vigente</fullName>
            </value>
            <value>
                <fullName>Pendência enviada - Grau de parentesco e/ou vinculo financeiro</fullName>
            </value>
            <value>
                <fullName>Pendência enviada - Esclarecimento da declaracao de saude</fullName>
            </value>
            <value>
                <fullName>Pendência enviada - Risco Agravado</fullName>
            </value>
            <value>
                <fullName>Pendência enviada - Envio de Anexos (Questionário)</fullName>
            </value>
            <value>
                <fullName>Pendência enviada - Exclusao de cobertura</fullName>
            </value>
            <value>
                <fullName>Pendência enviada - Comprovante de Renda</fullName>
            </value>
            <value>
                <fullName>Pendência enviada - Situação cadastral do CPF</fullName>
            </value>
            <value>
                <fullName>Pendência enviada - Esclarecimento da profissao ramo e atividade</fullName>
            </value>
            <value>
                <fullName>Pendência enviada - Contrato Social e Declaração de IR</fullName>
            </value>
            <value>
                <fullName>Pend Enviada Ag. DS/Assinatura</fullName>
            </value>
            <value>
                <fullName>Pend Enviada Ag. Questionário Samplemed</fullName>
            </value>
            <value>
                <fullName>Pendência enviada - Acúmulo de Capital</fullName>
            </value>
            <value>
                <fullName>Pendência enviada - Beneficiário Empregador</fullName>
            </value>
            <value>
                <fullName>Pendência enviada - Beneficiário é o próprio Segurado</fullName>
            </value>
            <value>
                <fullName>Pendência enviada - Transmissão em duplicidade</fullName>
            </value>
            <value>
                <fullName>Pendência enviada - Análise adicional de aceitação</fullName>
            </value>
            <value>
                <fullName>Pendência enviada - Vinculo financeiro</fullName>
            </value>
            <value>
                <fullName>Pendência enviada - Grau de parentesco e/ou vinculo financeiro&apos;: &apos;Solicitamos esclarecimentos quanto ao vínculo do(a) proponente com o(a) responsável financeiro indicado(a).</fullName>
                <isActive>false</isActive>
                <label>Pendência enviada - Grau de parentesco e/ou vinculo financeiro&apos;: &apos;Solicitamos esclarecimentos quanto ao vínculo do(a) proponente com o(a) responsável financeiro indicado(a).</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>