workspace-sf/force-app/main/default/objects/CriticaProposta__c/fields/NR__c.field-meta.xml
<CustomField>
    <fullName>NR__c</fullName>
    <formula>Proposta__r.NR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NR</label>
    <type>Text</type>
</CustomField>