workspace-sf/force-app/main/default/objects/CriticaProposta__c/fields/PrazoDeEmissaoDaProposta__c.field-meta.xml
<CustomField>
    <fullName>PrazoDeEmissaoDaProposta__c</fullName>
    <formula>Proposta__r.PrazoEmissao__c</formula>
    <label>Prazo de emissão da Proposta</label>
    <type>Text</type>
</CustomField>