workspace-sf/force-app/main/default/objects/CriticaProposta__c/fields/PrazoEmissao__c.field-meta.xml
<CustomField>
    <fullName>PrazoEmissao__c</fullName>
    <formula>IF(ISPICKVAL(Status__c, &apos;Recusado&apos;) , &apos;Crítica recusada&apos;,
IF(AND( ISBLANK(DataInicioAnalise__c) ,  ISBLANK(Data_Limite_fim_da_analise__c) ) , &apos;SLA Não Iniciado&apos;, 
		IF(AND(ISPICKVAL(Status__c, &apos;Pendenciado&apos;), TODAY() &lt; DataInicioPendencia__c),
	TEXT(DataInicioPendencia__c - TODAY()) + &apos;dia(s) para iniciar a Pendência&apos;,
	IF( AND(NOT(ISPICKVAL(Status__c, &apos;Pendenciado&apos;)),NOT(ISBLANK(DataFimPendencia__c))),
		IF(TODAY() &gt; (Data_Limite_fim_da_analise__c + (DataFimPendencia__c - DataInicioPendencia__c)),
			TEXT(TODAY() - (Data_Limite_fim_da_analise__c + (DataFimPendencia__c - DataInicioPendencia__c))) + &apos; dia(s) em Atraso&apos;,
			&apos;Falta(m) &apos; + TEXT((Data_Limite_fim_da_analise__c - ((DataFimPendencia__c - DataInicioPendencia__c) + TODAY()) )) + &apos; dia(s) antes de entrar em atraso&apos;),
		IF(AND(NOT(ISPICKVAL(Status__c, &apos;Pendeniado&apos;)),ISBLANK(DataFimPendencia__c)), 
			IF(TODAY() &gt; Data_Limite_fim_da_analise__c , 
				TEXT(TODAY() - Data_Limite_fim_da_analise__c) + &apos; dia(s) em Atraso&apos;, 
				IF(AND(TODAY() &lt; Data_Limite_fim_da_analise__c, TODAY() &lt; DataInicioAnalise__c), 
				&apos;Falta(m) &apos; + TEXT(DataInicioAnalise__c - TODAY()) + &apos; dia(s) para iniciar a análise&apos;, 
				&apos;Falta(m) &apos; + TEXT(Data_Limite_fim_da_analise__c - TODAY())  + &apos; dia(s) antes de entrar em atraso&apos;)), 
		TEXT(TODAY() - DataInicioPendencia__c) + &apos; dia(s) em Pendência&apos;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prazo de emissão</label>
    <type>Text</type>
</CustomField>