workspace-sf/force-app/main/default/objects/CriticaProposta__c/fields/Proposta__c.field-meta.xml
<CustomField>
    <fullName>Proposta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposta</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Críticas da proposta</relationshipLabel>
    <relationshipName>CriticasProposta</relationshipName>
    <type>Lookup</type>
</CustomField>