workspace-sf/force-app/main/default/objects/CriticaProposta__c/fields/Proprietario__c.field-meta.xml
<CustomField>
    <fullName>Proprietario__c</fullName>
    <formula>IF(Owner:User.FirstName != null, Owner:User.FirstName + &apos; &apos; + Owner:User.LastName ,   Owner:Queue.QueueName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proprietário</label>
    <type>Text</type>
</CustomField>