workspace-sf/force-app/main/default/objects/CriticaProposta__c/fields/ProprietarioList__c.field-meta.xml
<CustomField>
    <fullName>ProprietarioList__c</fullName>
    <label>Proprietario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>