workspace-sf/force-app/main/default/objects/CriticaProposta__c/fields/Retorno__c.field-meta.xml
<CustomField>
    <fullName>Retorno__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Deve ser marcado se a crítica for retornada para uma determinada fila</inlineHelpText>
    <label>Retorno</label>
    <type>Checkbox</type>
</CustomField>