workspace-sf/force-app/main/default/objects/CriticaProposta__c/fields/Setor__c.field-meta.xml
<CustomField>
    <fullName>Setor__c</fullName>
    <label>Setor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aceitação</fullName>
            </value>
            <value>
                <fullName>Emissão</fullName>
            </value>
            <value>
                <fullName>Renovação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>