workspace-sf/force-app/main/default/objects/CriticaProposta__c/fields/StatusProposta__c.field-meta.xml
<CustomField>
    <fullName>StatusProposta__c</fullName>
    <formula>TEXT(Proposta__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status da Proposta</label>
    <type>Text</type>
</CustomField>