workspace-sf/force-app/main/default/objects/CriticaProposta__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Analise</fullName>
                <label>Análise</label>
            </value>
            <value>
                <fullName>Aviso</fullName>
            </value>
            <value>
                <fullName>CriticaSAP</fullName>
                <label>Crítica SAP</label>
            </value>
            <value>
                <fullName>Pendencia</fullName>
                <label>Pendência</label>
            </value>
            <value>
                <fullName>Recusa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>