workspace-sf/force-app/main/default/objects/CriticaProposta__c/fields/Verifica_Liberacao__c.field-meta.xml
<CustomField>
    <fullName>Verifica_Liberacao__c</fullName>
    <description>Este campo ira replicar o valor de Liberar_palavra_final__c</description>
    <formula>Liberar_palavra_final__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verifica Liberação</label>
    <type>Checkbox</type>
</CustomField>