workspace-sf/force-app/main/default/objects/CriticaProposta__c/recordTypes/Aviso.recordType-meta.xml
<RecordType>
    <fullName>Aviso</fullName>
    <active>true</active>
    <label>Aviso</label>
</RecordType>