workspace-sf/force-app/main/default/objects/CriticaProposta__c/validationRules/EdicaoCriticaProposta.validationRule-meta.xml
<ValidationRule>
    <fullName>EdicaoCriticaProposta</fullName>
    <active>false</active>
    <description>Ao finalizar a análise de uma crítica da proposta (Liberado, Recusado, Cancelada ou Condicionada), não deve ser possível realizar novas edições no registro de crítica da proposta.</description>
    <errorConditionFormula>AND(
				NOT (ISNEW()), 
    OR(
      ISPICKVAL(PRIORVALUE(Status__c), &quot;Liberado&quot;),
      ISPICKVAL(PRIORVALUE(Status__c), &quot;Recusado&quot;),
      ISPICKVAL(PRIORVALUE(Status__c), &quot;Cancelada&quot;),				
      ISPICKVAL(PRIORVALUE(Status__c), &quot;Condicionada&quot;)
    )
)</errorConditionFormula>
    <errorMessage>Só é possível editar uma Crítica de Proposta cujo Status não seja Liberado, Recusado, Cancelada ou Condicionada.</errorMessage>
</ValidationRule>