workspace-sf/force-app/main/default/objects/CriticaProposta__c/validationRules/PreencherMotivoRecusaDaProposta.validationRule-meta.xml
<ValidationRule>
    <fullName>PreencherMotivoRecusaDaProposta</fullName>
    <active>true</active>
    <description>Só é permitido a recusa da critica se o campo CodigoMotivoDevolucao__c da proposta estiver preenchido</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &apos;Recusado&apos;),
  ISBLANK(TEXT(Proposta__r.CodigoMotivoDevolucao__c))
)</errorConditionFormula>
    <errorMessage>Para recusar a Critica e/ou Proposta o Motivo da Recusa/Devolução deve ser preenchido</errorMessage>
</ValidationRule>