workspace-sf/force-app/main/default/objects/CriticaProposta__c/validationRules/ValidacaoDataFinalAnalise.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacaoDataFinalAnalise</fullName>
    <active>true</active>
    <errorConditionFormula>Data_Limite_fim_da_analise__c &lt;  DataInicioAnalise__c</errorConditionFormula>
    <errorMessage>A data de analise final não pode ser menor do que a data de início</errorMessage>
</ValidationRule>