workspace-sf/force-app/main/default/objects/CriticaProposta__c/validationRules/ValidacaoDataFinalAnalisePorPendencia.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacaoDataFinalAnalisePorPendencia</fullName>
    <active>false</active>
    <errorConditionFormula>DataFimPendencia__c &gt;  DataFimAnalise__c</errorConditionFormula>
    <errorMessage>Data final da Pendência não pode ser maior do que a data final de análise</errorMessage>
</ValidationRule>