workspace-sf/force-app/main/default/objects/CriticaProposta__c/validationRules/ValidacaoDataFinalPendencia.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacaoDataFinalPendencia</fullName>
    <active>true</active>
    <errorConditionFormula>DataInicioPendencia__c &gt;  DataFimPendencia__c</errorConditionFormula>
    <errorMessage>Data Final da Pendência não pode ser menor do que a data inicial da Pendência</errorMessage>
</ValidationRule>