workspace-sf/force-app/main/default/objects/CriticaProposta__c/validationRules/ValidacaoDataFinalPendenciaPorStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacaoDataFinalPendenciaPorStatus</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISCHANGED(Status__c),
	ISBLANK(DataFimPendencia__c),
	ISPICKVAL(PRIORVALUE(Status__c),&quot;Pendenciado&quot;)
)</errorConditionFormula>
    <errorMessage>Para mudar o status de pendenciado, é necessário preencher data fim de pendência.</errorMessage>
</ValidationRule>