workspace-sf/force-app/main/default/objects/CriticaProposta__c/validationRules/ValidacaoDataInicialPendencia.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacaoDataInicialPendencia</fullName>
    <active>true</active>
    <errorConditionFormula>DataInicioAnalise__c &gt;  DataInicioPendencia__c</errorConditionFormula>
    <errorMessage>Data Inicial da Pendencia não pode ser maior do que a data inicial de análise</errorMessage>
</ValidationRule>