workspace-sf/force-app/main/default/objects/CriticaProposta__c/validationRules/ValidacaoDataInicialPendenciaHoje.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacaoDataInicialPendenciaHoje</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(DataInicioPendencia__c),
    DataInicioPendencia__c &lt; TODAY()
)</errorConditionFormula>
    <errorMessage>Data Inicial da Pendência não pode ser menor do que hoje</errorMessage>
</ValidationRule>