workspace-sf/force-app/main/default/objects/CriticaProposta__c/validationRules/ValidacaoDataInicioPendenciaPorStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacaoDataInicioPendenciaPorStatus</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(Status__c),
ISBLANK(DataInicioPendencia__c),  
ISPICKVAL(PRIORVALUE(Status__c),&quot;Pendenciado&quot;)
)</errorConditionFormula>
    <errorMessage>Para mudar o status de pendenciado, é necessário preencher data de início de pendência.</errorMessage>
</ValidationRule>