workspace-sf/force-app/main/default/objects/CriticaProposta__c/validationRules/ValidacaoMotivoPendencia.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacaoMotivoPendencia</fullName>
    <active>true</active>
    <description>Para colocar a critica da proposta com o Status de &quot;Pendenciiado&quot; deve preencher o campo Motivo da Pendência.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Pendenciado&quot;),
    ISBLANK(TEXT(MotivoPendencia__c))
)</errorConditionFormula>
    <errorMessage>Para pendenciar a critica deve preencher o campo Motivo da Pendência.</errorMessage>
</ValidationRule>