workspace-sf/force-app/main/default/objects/CriticaProposta__c/listViews/Fila_aceitacao_CriticaProposta.listView-meta.xml
<ListView>
    <fullName>Fila_aceitacao_CriticaProposta</fullName>
    <columns>Proposta__c</columns>
    <columns>StatusProposta__c</columns>
    <columns>NAME</columns>
    <columns>NR__c</columns>
    <columns>Codigo__c</columns>
    <columns>Descricao__c</columns>
    <columns>Status__c</columns>
    <columns>Tipo__c</columns>
    <columns>MomentoAnalise__c</columns>
    <columns>Area__c</columns>
    <columns>Setor__c</columns>
    <columns>PrazoDeEmissaoDaProposta__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>StatusProposta__c</field>
        <operation>equals</operation>
        <value>Em análise</value>
    </filters>
    <filters>
        <field>Retorno__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>EnvioParaAprovacao__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Liberado,Recusado,Cancelada,Pendenciado,Falha na Integração</value>
    </filters>
    <filters>
        <field>ProprietarioList__c</field>
        <operation>notEqual</operation>
        <value>Fila Propostas Prioritárias</value>
    </filters>
    <label>Fila aceitação</label>
    <queue>Filaaceitacao</queue>
</ListView>