workspace-sf/force-app/main/default/objects/CriticaProposta__c/listViews/Fila_Coordenador_CriticaProposta.listView-meta.xml
<ListView>
    <fullName>Fila_Coordenador_CriticaProposta</fullName>
    <columns>NAME</columns>
    <columns>MensagemCliente__c</columns>
    <columns>MensagemInterna__c</columns>
    <columns>MensagemRepresentante__c</columns>
    <filterScope>Queue</filterScope>
    <label>Fila Coordenador</label>
    <queue>Fila_Coordenador</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>