workspace-sf/force-app/main/default/objects/CriticaProposta__c/listViews/Fila_Palavra_final_CriticaProposta.listView-meta.xml
<ListView>
    <fullName>Fila_Palavra_final_CriticaProposta</fullName>
    <columns>Proposta__c</columns>
    <columns>StatusProposta__c</columns>
    <columns>NAME</columns>
    <columns>Codigo__c</columns>
    <columns>Descricao__c</columns>
    <columns>Status__c</columns>
    <columns>Tipo__c</columns>
    <columns>MomentoAnalise__c</columns>
    <columns>Area__c</columns>
    <columns>Setor__c</columns>
    <columns>PrazoDeEmissaoDaProposta__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Falha na Integração</value>
    </filters>
    <filters>
        <field>StatusProposta__c</field>
        <operation>equals</operation>
        <value>Em análise</value>
    </filters>
    <label>Fila Palavra final - Erro na integração</label>
</ListView>