workspace-sf/force-app/main/default/objects/CriticaProposta__c/listViews/Fila_Renovacao_CriticaProposta.listView-meta.xml
<ListView>
    <fullName>Fila_Renovacao_CriticaProposta</fullName>
    <filterScope>Queue</filterScope>
    <label>Fila Renovação</label>
    <queue>Fila_Renovacao</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>